// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RockConstants creates a Channel if it doesn't exist 1`] = `
Object {
  "id": 1,
}
`;

exports[`RockConstants creates a Channel if it doesn't exist 2`] = `
Array [
  Array [
    "InteractionChannels?%24filter=%28Name%20eq%20%27Apollos%20App%27%29%20and%20%28UsesSession%20eq%20true%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
  Array [
    "/InteractionChannels/1",
  ],
]
`;

exports[`RockConstants creates a Channel if it doesn't exist 3`] = `
Array [
  Array [
    "/InteractionChannels",
    Object {
      "Name": "Apollos App",
      "UsesSession": true,
    },
  ],
]
`;

exports[`RockConstants creates a Component if it doesn't exist 1`] = `Array []`;

exports[`RockConstants creates a Component if it doesn't exist 2`] = `
Array [
  Array [
    "InteractionChannels?%24filter=%28Name%20eq%20%27Apollos%20App%27%29%20and%20%28UsesSession%20eq%20true%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
  Array [
    "/InteractionChannels/1",
  ],
  Array [
    "InteractionComponents?%24filter=%28Name%20eq%20%27Apollos%20Content%20Item%27%29%20and%20%28ChannelId%20eq%201%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
]
`;

exports[`RockConstants creates a Component if it doesn't exist 3`] = `
Array [
  Array [
    "/InteractionChannels",
    Object {
      "Name": "Apollos App",
      "UsesSession": true,
    },
  ],
]
`;

exports[`RockConstants finds a ContentItem model ID 1`] = `
Object {
  "id": 1,
}
`;

exports[`RockConstants finds a ContentItem model ID 2`] = `
Array [
  Array [
    "EntityTypes?%24filter=Name%20eq%20%27Rock.Model.ContentChannelItem%27",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
]
`;

exports[`RockConstants finds a UniversalContentItem model ID 1`] = `
Object {
  "id": 1,
}
`;

exports[`RockConstants finds a UniversalContentItem model ID 2`] = `
Array [
  Array [
    "EntityTypes?%24filter=Name%20eq%20%27Rock.Model.ContentChannelItem%27",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
]
`;

exports[`RockConstants finds the Channel if it exists 1`] = `
Object {
  "id": 1,
}
`;

exports[`RockConstants finds the Channel if it exists 2`] = `
Array [
  Array [
    "InteractionChannels?%24filter=%28Name%20eq%20%27Apollos%20App%27%29%20and%20%28UsesSession%20eq%20true%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
]
`;

exports[`RockConstants finds the Component if it exists 1`] = `
Object {
  "id": 1,
}
`;

exports[`RockConstants finds the Component if it exists 2`] = `
Array [
  Array [
    "InteractionChannels?%24filter=%28Name%20eq%20%27Apollos%20App%27%29%20and%20%28UsesSession%20eq%20true%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
  Array [
    "InteractionComponents?%24filter=%28Name%20eq%20%27Apollos%20Content%20Item%27%29%20and%20%28ChannelId%20eq%201%29",
    Object {},
    Object {
      "ttl": 86400,
    },
  ],
]
`;
